fix central align on all pages

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,9 @@
 body {
     font-family: 'Muli', sans-serif;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
 }
 
 .header {
